k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    app: voting-app
