k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: vote
spec:
  replicas: 2
  selector:
    matchLabels: { app: vote }
  template:
    metadata:
      labels: { app: vote }
    spec:
      containers:
        - name: vote
          image: 694862618269.dkr.ecr.us-east-1.amazonaws.com/voting-app/vote:latest
          ports: [{ containerPort: 80 }]
          resources:
            requests: { memory: "64Mi", cpu: "50m" }
            limits: { memory: "128Mi", cpu: "100m" }
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: vote
spec:
  selector: { app: vote }
  ports: [{ port: 80, targetPort: 80 }]
  type: ClusterIP
